[gd_scene load_steps=5 format=3 uid="uid://2huam1cleev4"]

[ext_resource type="Script" path="res://Level6.gd" id="1_25c6n"]
[ext_resource type="Texture2D" uid="uid://cxqs82jkt15qn" path="res://Images/ceres.jpg" id="2_gpyl7"]
[ext_resource type="FontFile" uid="uid://dkppgt0hpuagh" path="res://fonts/Robot Go.ttf" id="3_jt86l"]
[ext_resource type="PackedScene" uid="uid://deyvy83bi0rnp" path="res://texture_rect.tscn" id="4_116ut"]

[node name="Level6" type="Node2D"]
script = ExtResource("1_25c6n")

[node name="Background" type="TextureRect" parent="."]
offset_left = -136.0
offset_right = 1475.0
offset_bottom = 1292.0
texture = ExtResource("2_gpyl7")
metadata/_edit_use_anchors_ = true

[node name="LevelLabel" type="Label" parent="."]
offset_left = 633.0
offset_top = 44.0
offset_right = 886.0
offset_bottom = 82.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_jt86l")
theme_override_font_sizes/font_size = 33
text = "Level 6"
horizontal_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Questionbox" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 404.0
offset_right = 1382.0
offset_bottom = 1258.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.696725, 0.744501, 0.829738, 1)
metadata/_edit_use_anchors_ = true

[node name="answersbox" type="ColorRect" parent="."]
offset_left = 1070.0
offset_top = 402.0
offset_right = 1382.0
offset_bottom = 1026.0
color = Color(0.775343, 0.805534, 0.913365, 1)
metadata/_edit_use_anchors_ = true

[node name="SentenceLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 420.0
offset_right = 876.0
offset_bottom = 1141.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jt86l")
theme_override_font_sizes/font_size = 25
text = "Testing"
vertical_alignment = 3
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="AnswerKeyLabel" type="Label" parent="."]
offset_left = 1154.0
offset_top = 426.0
offset_right = 1287.0
offset_bottom = 470.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jt86l")
theme_override_font_sizes/font_size = 20
text = "Answer Key:"
metadata/_edit_use_anchors_ = true

[node name="Text1" parent="." instance=ExtResource("4_116ut")]
offset_left = 57.0
offset_top = 1092.0
offset_right = 235.0
offset_bottom = 1140.0
metadata/_edit_use_anchors_ = true

[node name="Text2" parent="." instance=ExtResource("4_116ut")]
offset_left = 36.0
offset_top = 729.0
offset_right = 214.0
offset_bottom = 777.0
metadata/_edit_use_anchors_ = true

[node name="Text3" parent="." instance=ExtResource("4_116ut")]
offset_left = 22.0
offset_top = 497.0
offset_right = 200.0
offset_bottom = 545.0
metadata/_edit_use_anchors_ = true

[node name="SubmitButton" type="Button" parent="."]
offset_left = 903.0
offset_top = 868.0
offset_right = 1044.0
offset_bottom = 918.0
theme_override_colors/font_hover_color = Color(0.86605, 0.767793, 0.85492, 1)
theme_override_fonts/font = ExtResource("3_jt86l")
theme_override_font_sizes/font_size = 20
text = "Submit"
metadata/_edit_use_anchors_ = true

[node name="NextLevel" type="Button" parent="."]
offset_left = 912.0
offset_top = 414.0
offset_right = 1053.0
offset_bottom = 464.0
theme_override_colors/font_hover_color = Color(0.702431, 0.717565, 0.977745, 1)
theme_override_fonts/font = ExtResource("3_jt86l")
theme_override_font_sizes/font_size = 20
text = "Next Level"
metadata/_edit_use_anchors_ = true

[node name="ErrorNext" type="Label" parent="."]
offset_left = 878.0
offset_top = 475.0
offset_right = 1066.0
offset_bottom = 594.0
theme_override_colors/font_color = Color(0.815686, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jt86l")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="HelpButton" type="Button" parent="."]
offset_left = 1270.0
offset_top = 335.0
offset_right = 1358.0
offset_bottom = 385.0
theme_override_fonts/font = ExtResource("3_jt86l")
theme_override_font_sizes/font_size = 20
text = "Help"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="SubmitButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_button_2_pressed"]
